# poke_local_llm_rl

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: base.toml  bigger.toml  run_pretrained.toml
scripts/: smoke_env.py  train_grpo.py  verify_rom.py
src/poke_llm_rl/: .trainer.py.swp  __init__.py  actions.py  config.py  env.py  prompts.py  reward.py  state.py  trainer.py
tests/: test_actions.py  test_config.py  test_prompts.py  test_reward.py
